게시판, 리뷰, 좋아요 오류 수정